# gcode

./: .gitignore  Cargo.toml  DESIGN.md  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
app/: package.json  pnpm-lock.yaml
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/src/: lib.rs
app/src/lib/: actions.ts  api.ts
app/src/lib/components/: Badge.svelte  Button.svelte  DiffStat.svelte  DiffView.svelte  Editor.svelte  FileTree.svelte  Input.svelte  Kbd.svelte  Md.svelte  Modal.svelte  StatusDot.svelte  TaskCard.svelte  TaskRow.svelte  Tooltip.svelte
app/src/lib/design/: app.css  tokens.css
app/src/routes/: +layout.svelte  +page.svelte
crates/gcode-cli/: Cargo.toml
crates/gcode-cli/src/: main.rs
crates/gcode-core/: Cargo.toml
crates/gcode-core/src/: actor.rs  archive.rs  context.rs  diff.rs  domain.rs  engine.rs  error.rs  files.rs  git.rs  lib.rs  namer.rs  provision.rs  queues.rs  runner.rs  scan.rs  session.rs  state.rs  transcript.rs
crates/gcode-core/tests/: e2e_archive.rs  e2e_project.rs  e2e_provision.rs  live_claude.rs
crates/gcode-core/tests/fixtures/: claude_stream_real.jsonl
docs/design/: design-system.md  gcode.pen  styleguide-preview.html  ui-inventory.md
docs/plan/: 00-overview.md  checkpoint-01-revision.md  phase-00-skeleton.md  phase-01-core.md  phase-02-agents.md  phase-03a-ui-design.md  phase-03b-first-screens.md  phase-04-editor-diff.md  phase-045-tabs-and-navigator.md  v1-scope.md
docs/research/: project-knowledge-research.md  ui-research.md
(+1 files in other folders)
