[package]
name = "gcode-cli"
description = "Thin CLI over gcode-core (scripting, bots, automation)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "gcode"
path = "src/main.rs"

[dependencies]
gcode-core = { path = "../gcode-core" }
clap = { version = "4", features = ["derive"] }
