[package]
name = "gcode-core"
description = "Core engine of gcode — the agentic IDE: projects, multi-repo tasks, threads, groups, ops"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[dev-dependencies]
tempfile = "3"
